src/test/deca/syntax/valid/created/testEmptyMain/emptyMain.deca
// Description :
//    Test d'un programme avec un bloc vide
//
// Résultats :
//    ok

{}

