src/test/deca/syntax/invalid/created/ifThenElse/wrongIfBlock.deca
// Description :
//    Test invalide : un if sans block d'execution
//
// Résultats :
//    Erreur Syntaxique
//    Ligne 10: missing '{' at '}'

{
    if (cond) 
}